[package]
name = "payup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
trust-dns-resolver = "0.20"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde_derive = "1.0.130"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["reqwest/default-tls", "trust-dns-resolver/dns-over-native-tls"]