[package]
name = "payup"
description = "A synchronous + asynchronous payment library for processing payments with rust. Stripe is quasi-supported if you don't need the full api."
version = "0.1.3"
edition = "2018"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/payup"
repository = "https://github.com/PixelCoda/Payup-Rust"
readme = "README.md"

[dependencies]
serde_json = "1.0"
trust-dns-resolver = "0.20"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde_derive = "1.0.130"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["reqwest/default-tls", "trust-dns-resolver/dns-over-native-tls"]